# genai-blog

./: .gitignore  README.md
agents_basic/: agents.tf  prompt.tf  providers.tf
bedrock_cw_board/: .terraform.lock.hcl  cloudwatch.tf  providers.tf
bedrock_latency_optimized_inference/: .terraform.lock.hcl  locals.tf  ohio.tf  oregon.tf  outputs.tf  prompt.tf  providers.tf  virginia.tf
claude-code-init/: CLAUDE.with_ultrathink_01.md  CLAUDE.with_ultrathink_02.md  CLAUDE.without_ultrathink_01.md  CLAUDE.without_ultrathink_02.md
converse_api_with_guardrails/: app.py  pyproject.toml  streamlit.py  streamlit2.py
deepseek-eks-automode/: .terraform.lock.hcl  eks.tf  providers.tf  vpc.tf
flow_agents_multi_turn/: .terraform.lock.hcl  agents.tf  flows.tf  lambda.tf  prompt.tf  providers.tf
knowledge_base_support_terraform/: main.tf  providers.tf  terraform.tfvars
knowledge_bases_advanced_parsing/: .terraform.lock.hcl  main.py  main.tf  providers.tf
knowledge_bases_bedrock_data_automation/: .terraform.lock.hcl  locals.tf  main.tf  providers.tf
knowledge_bases_binary_embeddings/: .terraform.lock.hcl  aoss.tf  datasource.tf  knowledge_bases.tf  providers.tf  variables.tf
knowledge_bases_chat_with_your_document/: app.py  pyproject.toml
knowledge_bases_initial_sync/: locals.tf  oregon.tf  outputs.tf  providers.tf  variables.tf
knowledge_bases_pinecone_serverless/: .terraform.lock.hcl  locals.tf  main.tf  providers.tf  terraform.tfvars.sample
knowledge_bases_with_session_id/: app.py  pyproject.toml
knowledge_bases_with_session_id/log/: 1st.json  sample.xml
(+144 files in other folders)
