[tool.poetry]
name = "converse-api-with-guardrails"
version = "0.1.0"
description = ""
authors = ["takakuni.shinnosuke <takakuni.shinnosuke@classmethod.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.131"
streamlit = "^1.36.0"
botocore = "^1.34.131"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
