[tool.poetry]
name = "knowledge-bases-with-session-id"
version = "0.1.0"
description = ""
authors = ["Takakuni"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.98"
streamlit = "^1.34.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
